Fixed some issues with the AutoRecognizer - the style CSS had a lower z-index than required

--- a/skins/columns/css/style.css
+++ b/skins/columns/css/style.css
@@ -243,7 +243,7 @@ a:hover {
 .tool {
 	right:auto;
 	opacity:1;
-	z-index:2;
+	z-index:5;
 	min-width:430px;
 }
 .content {
